<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#7F5AA5"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_buscar_jogo"
            android:paddingEnd="5dp"
            app:menu="@menu/search_bar_menu" />
    </LinearLayout>


    <ImageView
        android:id="@+id/img_in_dev"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="20dp"
        android:src="@drawable/in_development"
        app:layout_constraintBottom_toTopOf="@id/navigation_bar"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_nav_bar_bg"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/icone_ativo"
                android:paddingHorizontal="0dp"
                android:text="@string/btn_buscar"
                android:textColor="@color/icone_inativo"
                android:textSize="10sp"
                android:textStyle="bold"
                app:icon="@drawable/baseline_search_24"
                app:iconGravity="top"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="@color/icone_inativo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_community"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_inativo"
                android:paddingHorizontal="0dp"
                android:text="@string/btn_comunidade"
                android:textColor="@color/icone_inativo"
                android:textSize="10sp"
                android:textStyle="bold"
                app:icon="@drawable/baseline_groups_24"
                app:iconGravity="top"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="@color/icone_inativo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_my_games"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_inativo"
                android:paddingHorizontal="0dp"
                android:text="@string/btn_meus_jogos"
                android:textColor="@color/icone_inativo"
                android:textSize="10sp"
                android:textStyle="bold"
                app:icon="@drawable/baseline_format_list_bulleted_24"
                app:iconGravity="top"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="@color/icone_inativo" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="53dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/btn_inativo"
            android:paddingVertical="16dp"
            app:icon="@drawable/baseline_add_24"
            app:iconGravity="top"
            app:iconSize="20dp"
            app:iconTint="@color/icone_inativo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>